# mesh-deformation-gui

./: .gitmodules  CMakeLists.txt  README.md  deformed_sphere.off  file.csv  imgui.ini  sphere.off
Glitter/Headers/: Camera.h  Mesh.h  Shader.h  Vendors.h
Glitter/Sources/: Camera.cpp  Mesh.cpp  Shader.cpp  main.cpp
data/models/: cube.fbx  fox.mtl  foxxy.mtl  suzzy.fbx  torus.fbx  uv_sphere.fbx
data/shaders/: base.frag  base.vert  unlit.frag
